home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - name: http
              protocol: TCP
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: config
          configMap:
            name: home-assistant-configmap
